--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-       
+
         <!--
                Set to true if your app is Standalone, that is, it does not require the handheld
                app to run.
         -->
 
         <activity
-            android:name=".ui.login.Recipe_Steps"
+            android:name=".ui.login.EditRecipe"
             android:label="@string/title_activity_recipe__steps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,15 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
