--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        
 
         <activity
             android:name=".ui.login.EditRecipe"
             android:label="@string/title_activity_recipe__steps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+
+
             </intent-filter>
         </activity>
+        <activity android:name=".ui.login.Recipe_Steps"></activity>
+        
 
     </application>
 
